# ROS2_Secure-Communication

./: .gitignore  README.md  generate_keys.sh
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: SignedData.msg
src/custom_nodes/: CMakeLists.txt  package.xml
src/custom_nodes/src/: attacker_node.cpp  control_node.cpp  offboard_node.cpp  setpoint_node.cpp
src/secure_node/: CMakeLists.txt  package.xml
src/secure_node/src/: attacker_node.cpp  publisher_node.cpp  subscriber_node.cpp
